--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -36,8 +36,6 @@
         <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
             <div class="d-inline-flex align-items-center">
                 <a class="text-body pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</a>
-                <span class="text-body">|</span>
-                <a class="text-body px-3" href=""><i class="fa fa-envelope mr-2"></i>info@example.com</a>
             </div>
         </div>
         <div class="col-md-6 text-center text-lg-right">
@@ -172,7 +170,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-headset text-secondary"></i>
                     </div>
-                    <h4 class="text-uppercase m-0">24/7 JUGURUK Support</h4>
+                    <h4 class="text-uppercase m-0">24/7 Байланышта</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
@@ -180,7 +178,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-car text-secondary"></i>
                     </div>
-                    <h4 class="text-light text-uppercase m-0">JUGURUK Reservation Anytime</h4>
+                    <h4 class="text-light text-uppercase m-0">Сапат жана кепилдик</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
@@ -188,7 +186,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
                     </div>
-                    <h4 class="text-uppercase m-0">Lots Of Pickup Locations</h4>
+                    <h4 class="text-uppercase m-0">Адрес Ден сяопино 226</h4>
                 </div>
             </div>
         </div>
