--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,8 +36,6 @@
         <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
             <div class="d-inline-flex align-items-center">
                 <a class="text-body pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</a>
-                <span class="text-body">|</span>
-                <a class="text-body px-3" href=""><i class="fa fa-envelope mr-2"></i>info@example.com</a>
             </div>
         </div>
         <div class="col-md-6 text-center text-lg-right">
@@ -89,7 +87,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-headset text-secondary"></i>
                     </div>
-                    <h4 class="text-uppercase m-0">24/7 Car Rental Support</h4>
+                    <h4 class="text-uppercase m-0">24/7 Байланышта</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
@@ -97,7 +95,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-car text-secondary"></i>
                     </div>
-                    <h4 class="text-light text-uppercase m-0">Car Reservation Anytime</h4>
+                    <h4 class="text-light text-uppercase m-0">Сапат жана кепилдик</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
@@ -105,7 +103,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
                     </div>
-                    <h4 class="text-uppercase m-0">Lots Of Pickup Locations</h4>
+                    <h4 class="text-uppercase m-0">Адрес Ден сяопино 226</h4>
                 </div>
             </div>
         </div>
@@ -221,35 +219,22 @@
                 </div>
             </div>
             <div class="col-lg-5 mb-2">
-                <div class="bg-secondary d-flex flex-column justify-content-center px-5 mb-4" style="height: 435px;">
+                <div class="bg-secondary d-flex flex-column justify-content-center px-5 mb-4" style="height: 320px;">
                     <div class="d-flex mb-3">
                         <i class="fa fa-2x fa-map-marker-alt text-primary flex-shrink-0 mr-3"></i>
                         <div class="mt-n1">
-                            <h5 class="text-light">Head Office</h5>
-                            <p>123 Street, New York, USA</p>
+                            <h5 class="text-light">Башкы офис</h5>
+                            <p>Ден сяопино 226</p>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
                         <i class="fa fa-2x fa-map-marker-alt text-primary flex-shrink-0 mr-3"></i>
                         <div class="mt-n1">
-                            <h5 class="text-light">Branch Office</h5>
-                            <p>123 Street, New York, USA</p>
+                            <h5 class="text-light">Ош шаары</h5>
+                            <p>Ош круговой фурхат</p>
                         </div>
                     </div>
-                    <div class="d-flex mb-3">
-                        <i class="fa fa-2x fa-envelope-open text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Customer Service</h5>
-                            <p>customer@example.com</p>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <i class="fa fa-2x fa-envelope-open text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Return & Refund</h5>
-                            <p class="m-0">refund@example.com</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
