--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -48,23 +48,22 @@
 <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
-        <div class="position-relative px-lg-5" style="z-index: 9;">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="text-uppercase text-primary mb-1">JUGURUK</h1>
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
-                        <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
-                        <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
-                        <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
-                    </div>
+<!-- Navbar Start -->
+<div class="container-fluid position-relative nav-bar p-0">
+    <div class="position-relative px-lg-5" style="z-index: 9;">
+        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
+            <a href="" class="navbar-brand">
+                <h1 class="text-uppercase text-primary mb-1">JUGURUK</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
+                <div class="navbar-nav ml-auto py-0">
+                    <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
+                    <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
+                    <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
+                    <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
                 </div>
             </div>
         </nav>
@@ -83,55 +82,58 @@
     </div>
 </div>
 <!-- Page Header Start -->
-
-
 <!-- Contact Start -->
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
-        <h1 class="display-4 text-uppercase text-center mb-5"></h1>
-        <div class="row">
-            <div class="col-lg-7 mb-2">
-                <div class="contact-form bg-light mb-4" style="padding: 30px;margin-top:100px;">
-                    <div class="contact-form bg-light mb-4" style="padding: 30px; text-align:center;">
-                        <a
-                                href="https://wa.me/996XXXXXXXXX"
-                                class="btn btn-success py-3 px-5"
-                                target="_blank"
-                        >
-                            Написать в WhatsApp
-                        </a>
+        <h1 class="display-4 text-uppercase text-center mb-5">Байланыш</h1>
+        <div class="text-center mb-5">
+            <p class="lead">Биздин электр лаболор жөнүндө суроолоруңуз болсо, тартынбаңыз! Биз сизге жардам берүүгө даярбыз.</p>
+        </div>
+
+        <!-- Вариант 3 с цветом bg-primary-subtle -->
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="bg-light p-5 rounded">
+                    <div class="row text-center">
+                        <!-- Адреса -->
+                        <div class="col-md-4 mb-4">
+                            <div class="bg-white p-4 rounded shadow-sm h-100">
+                                <i class="fa fa-2x fa-map-marker-alt text-primary-subtle mb-3"></i>
+                                <h5 class="text-uppercase mb-3 text-primary-subtle">Адрестер</h5>
+                                <p class="mb-2"><strong class="text-dark">Бишкек</strong><br>Ден Сяопино, 226</p>
+                                <p class="mb-0"><strong class="text-dark">Ош</strong><br>Круговой, Фурхат</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4">
+                            <div class="bg-white p-4 rounded shadow-sm h-100">
+                                <i class="fa fa-2x fa-clock text-primary-subtle mb-3"></i>
+                                <h5 class="text-uppercase mb-3 text-primary-subtle">Иш тартиби</h5>
+                                <p class="mb-2">Дүйшөмбү-Жума: 10:00-20:00</p>
+                                <p class="mb-0">Ишемби: 10:00-18:00</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4">
+                            <div class="bg-white p-4 rounded shadow-sm h-100">
+                                <i class="fa fa-2x fa-comments text-primary-subtle mb-3"></i>
+                                <h5 class="text-uppercase mb-3 text-primary-subtle">Байланыш</h5>
+                                <p class="mb-3">Тезирээк жооп алуу үчүн</p>
+                                <a href="https://wa.me/996776203384"
+                                   class="btn btn-success btn-block py-2"
+                                   target="_blank">
+                                    <i class="fab fa-whatsapp mr-2"></i>WhatsApp
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
-                </div>
-            </div>
-            <div class="col-lg-5 mb-2">
-                <div class="bg-secondary d-flex flex-column justify-content-center px-5 mb-4" style="height: 435px;">
-                    <div class="d-flex mb-3">
-                        <i class="fa fa-2x fa-map-marker-alt text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Head Office</h5>
-                            <p>123 Street, New York, USA</p>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <i class="fa fa-2x fa-map-marker-alt text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Branch Office</h5>
-                            <p>123 Street, New York, USA</p>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <i class="fa fa-2x fa-envelope-open text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Customer Service</h5>
-                            <p>customer@example.com</p>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <i class="fa fa-2x fa-envelope-open text-primary flex-shrink-0 mr-3"></i>
-                        <div class="mt-n1">
-                            <h5 class="text-light">Return & Refund</h5>
-                            <p class="m-0">refund@example.com</p>
+                    <div class="row mt-4">
+                        <div class="col-12 text-center">
+                            <div class="bg-primary-subtle text-dark p-4 rounded">
+                                <h5 class="text-uppercase mb-2">Жеке кардарларга кызмат</h5>
+                                <p class="mb-0">Ар бир кардарга жекече мамиле, сапат жана ишенимдүүлүк кепилдиги менен!</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,43 +142,40 @@
     </div>
 </div>
 <!-- Contact End -->
-
-
 <!-- Footer Start -->
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>123 Street, New York, USA</p>
-            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
-            <h6 class="text-uppercase text-white py-2">Follow Us</h6>
+            <h4 class="text-uppercase text-light mb-4">Байланыш</h4>
+            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Ден Сяопино 226, Бишкек</p>
+            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+996772 468 888</p>
+            <p><i class="fa fa-envelope text-white mr-3"></i>info@juguruk.kg</p>
+            <h6 class="text-uppercase text-white py-2">Социалдык тармактар</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square"
+                <a class="btn btn-lg btn-dark btn-lg-square mr-2"
                    href="https://wa.me/996776203384"
                    target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
                 <a class="btn btn-lg btn-dark btn-lg-square"
-                   href="https://www.instagram.com/alym_kg/"
+                   href="https://www.instagram.com/ramazan.suiumbekuulu/"
                    target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Usefull Links</h4>
+            <h4 class="text-uppercase text-light mb-4">Пайдалуу шилтемелер</h4>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Private Policy</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Term & Conditions</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>New Member Registration</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Affiliate Programme</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Return & Refund</a>
-                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Help & FQAs</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жашыруун саясат</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Шарттар жана шарттар</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Каттоо</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Кайтаруу</a>
+                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жардам</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Car Gallery</h4>
+            <h4 class="text-uppercase text-light mb-4">Лаболор галереясы</h4>
             <div class="row mx-n1">
                 <div class="col-4 px-1 mb-2">
                     <a href=""><img class="w-100" th:src="@{/img/gallery-1.jpg}" alt=""></a>
@@ -201,13 +200,10 @@
     </div>
 </div>
 <div class="container-fluid bg-dark py-4 px-sm-3 px-md-5">
-    <p class="mb-2 text-center text-body">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-    <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+    <p class="mb-2 text-center text-body">&copy; <a href="#">JUGURUK</a>. Бардык укуктар корголгон.</p>
+    <p class="m-0 text-center text-body">Дизайн <a href="https://htmlcodex.com">HTML Codex</a> тарабынан</p>
 </div>
-<!-- Footer End -->
 
-
-<!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
