--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -72,7 +72,7 @@
         </nav>
     </div>
 </div>
-<!-- Navbar End -->
+<!-- Navbar End ......-->
 
 <!-- Catalog Section Start -->
 <div class="container-fluid catalog-section">
