--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -192,7 +192,7 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Лабо 2025</h4>
-                        <div class="car-price">$69,900</div>
+                        <div class="car-price">69,900 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
                                 <i class="fas fa-tachometer-alt"></i> 150km
@@ -201,7 +201,7 @@
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Audi A4 2022', '39900')">
+                        <button class="car-btn" onclick="openWhatsApp('Лабо 2022', '39900')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Муравей 2025</h4>
-                        <div class="car-price">66,540</div>
+                        <div class="car-price">66,540 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
                                 <i class="fas fa-tachometer-alt"></i> 200km
@@ -226,7 +226,7 @@
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Ford Mustang 2023', '28540')">
+                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '58540')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -248,7 +248,7 @@
             <h6 class="text-uppercase text-white py-2">Follow Us</h6>
             <div class="d-flex justify-content-start">
                 <a class="btn btn-lg btn-dark btn-lg-square"
-                   href="https://wa.me/996776203384"
+                   href="https://wa.me/996755001008"
                    target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
@@ -323,7 +323,7 @@
 <script>
     function openWhatsApp(carName, carPrice) {
         // Замените этот номер на номер телефона админа (в международном формате, без +)
-        const adminPhone = '996776203384';
+        const adminPhone = '996755001008';
 
         const message = `Здравствуйте! Меня интересует: ${carName}  Цена: ${carPrice} сом
         Можете предоставить дополнительную информацию об этом товаре?`;
